Support Java 25 and Java 26